<resources>
    <string name="app_name">App Portfolio</string>

    <string name="title">Michael Narvaez App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_app_material">Make Your app Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone: My Own App</string>

    <string name="launch">Launch </string>

</resources>
